--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>bookshop</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>bookshop-1.0-SNAPSHOT</name>
+    <name>Bookshop-1.0-SNAPSHOT</name>
     
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
